changing quotation attributes, adding sizing to prevent shift

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -627,19 +627,28 @@ nav ul li :hover {
   margin: 0 auto;
 }
 
-.quotation-l {
-  display: flex;
-  text-align: right;
-  justify-content: right;
-  align-items: first baseline;
-  padding-right: 1em;
+.quotation-l,
+.quotation-r {
+  width: 100%;
+  max-width: 100vw;
+  min-height: 1vh;
+  height: auto
 }
 
 .quotation-r img,
 .quotation-l img {
-  width: 3vw;
+  width: 25%;
+  max-width: 20vw;
   height: auto;
   aspect-ratio: 1 / 1;
+}
+
+.quotation-l {
+  display: flex;
+  text-align: right;
+  align-items: start;
+  justify-content: right;
+  padding-right: 1em;
 }
 
 .quotation-r {
@@ -652,12 +661,18 @@ nav ul li :hover {
 .quote {
   background-color: #d8d9c7;
   border-radius: 1.5em;
+  width: 100%;
+  max-width: 100vw;
+  min-height: 2vh;
+  height: auto;
 }
 
 .quote p,
 .quote h1 {
   font-size: 1.5vw;
   padding: 1em 2em;
+  width: 100%;
+  height: auto;
 }
 
 .article-list {
@@ -681,11 +696,17 @@ nav ul li :hover {
 .article-title h1 {
   padding: 1.5em 0 0;
   font-size: 3.5vw;
+  width: 100%;
+  height: auto;
+  min-height: 1vh;
 }
 
 .article-title p {
   font-size: 1.2vw;
   padding: 0 0 3em;
+  width: 100%;
+  height: auto;
+  min-height: 1vh;
 }
 
 .guidelines-bottom p {
